Fixes #31 - Voiced font icon isn't visible...

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -193,8 +193,14 @@ html, body, .container {
 }
 
 .user-voiced:before {
-    content: '🔊 ';
+    content: '\e038 ';
     font-size: 0.9em;
+    font-family: "Glyphicons Halflings";
+    position: relative;
+    top: 2px;
+    display: inline-block;
+    padding-right: 5px;
+    line-height: 1;
 }
 
 .user-op:before {
